# IGCIT-Helper

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  ExtractDumpsCompressThread.h  Logger.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: registryUtils.cpp  registryUtils.h  win.h
pages/: DevicePage.cpp  DevicePage.h  LogPage.cpp  LogPage.h
pages/ToolsPage/: ToolsPage.cpp  ToolsPage.h
pages/ToolsPage/Widgets/: CrashDumps.cpp  CrashDumps.h  SSU.cpp  SSU.h  TDRDelay.cpp  TDRDelay.h
resources/: resources.qrc  win.rc.in
